--- a/Entregable/app/src/main/res/layout/activity_main.xml
+++ b/Entregable/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,7 +33,7 @@
         android:id="@+id/btnHideAB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/btnOcult"
+        android:text="@string/btnHide"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
