--- a/Entregable/app/src/main/res/menu/menu.xml
+++ b/Entregable/app/src/main/res/menu/menu.xml
@@ -2,7 +2,7 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:icon="@android:drawable/arrow_down_float"
+        android:icon="@mipmap/ic_launcher"
         android:title="@string/listado"
         app:showAsAction="always|withText" />
     <item android:title="@string/fav" />
