--- a/Entregable/app/src/main/res/layout/activity_cartel.xml
+++ b/Entregable/app/src/main/res/layout/activity_cartel.xml
@@ -20,11 +20,12 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:fillViewport="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/imgCartel"
         app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/imgCartel"
         app:layout_constraintTop_toBottomOf="@+id/imgCartel">
 
         <LinearLayout
