--- a/Entregable/app/src/main/res/layout/activity_cartel.xml
+++ b/Entregable/app/src/main/res/layout/activity_cartel.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#C9F8B7F8"
     tools:context=".Cartel">
 
     <ImageView
