--- a/Entregable/app/src/main/res/layout/activity_main.xml
+++ b/Entregable/app/src/main/res/layout/activity_main.xml
@@ -5,14 +5,17 @@
     android:id="@+id/linearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FAC978BD"
     tools:context=".MainActivity">
 
     <TextView
         android:id="@+id/txtSelectedMovie"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
+        android:gravity="center"
         android:text="TextView"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
