--- a/Entregable/app/src/main/res/layout/elemento.xml
+++ b/Entregable/app/src/main/res/layout/elemento.xml
@@ -5,6 +5,7 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="#FCEB93D2"
     android:orientation="vertical">
 
     <TextView
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -43,9 +44,16 @@
         android:layout_width="53dp"
         android:layout_height="51dp"
         android:scrollbarSize="4dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imgPortada"
         app:layout_constraintStart_toStartOf="@+id/txtDirector"
         app:layout_constraintTop_toBottomOf="@+id/txtDirector"
-        app:layout_constraintVertical_bias="1.0"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="match_parent"
+        android:layout_height="010dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintTop_toBottomOf="@+id/imgPortada"
+        tools:layout_editor_absoluteX="0dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
