--- a/Entregable/app/src/main/res/layout/pelislista.xml
+++ b/Entregable/app/src/main/res/layout/pelislista.xml
@@ -66,13 +66,10 @@
         android:id="@+id/imgClasi"
         android:layout_width="100dp"
         android:layout_height="91dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginLeft="56dp"
-        android:layout_marginTop="60dp"
         android:alpha="0.8"
         android:scaleX="0.5"
         android:scaleY=" 0.5"
-        app:layout_constraintStart_toStartOf="@+id/imgCaratula"
-        app:layout_constraintTop_toTopOf="@+id/imgCaratula"
+        app:layout_constraintStart_toEndOf="@+id/txtSala"
+        app:layout_constraintTop_toTopOf="@+id/txtDuracion"
         tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
