--- a/Entregable/app/src/main/res/menu/menu.xml
+++ b/Entregable/app/src/main/res/menu/menu.xml
@@ -3,14 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/itemListado"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@android:drawable/ic_menu_more"
         android:title="@string/listado"
         app:showAsAction="always|withText" />
     <item
         android:id="@+id/itemFav"
-        android:title="@string/fav" />
+        android:icon="@android:drawable/btn_star_big_on"
+        android:title="@string/fav"
+        app:showAsAction="always" />
     <item
         android:id="@+id/itemAdd"
+        android:icon="@android:drawable/ic_input_add"
         android:title="@string/add"
         app:showAsAction="always" />
 </menu>
